--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -1,16 +1,17 @@
-h1 新しいゲームを開始します
+.container
+  h1 新しいゲームを開始します
 
-.row
-  .col-lg-6
-    = form_for @game, url: game_path do |f|
-      .form-group
-        label for="game_players_number" プレイヤー人数
-        = f.select :players_number, [2,3,4,5,6], {}, class: "form-control"
-        / select.form-control#players_number
-        /   option 2
-        /   option 3
-        /   option 4
-        /   option 5
-        /   option 6
+  .row
+    .col-lg-6
+      = form_for @game, url: game_path do |f|
+        .form-group
+          label for="game_players_number" プレイヤー人数
+          = f.select :players_number, [2,3,4,5,6], {}, class: "form-control"
+          / select.form-control#players_number
+          /   option 2
+          /   option 3
+          /   option 4
+          /   option 5
+          /   option 6
 
-      button.btn.btn-primary type="submit" 開始
+        button.btn.btn-primary type="submit" 開始
