Add dice move action

--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -25,8 +25,35 @@
         .card-body.p-1
           - board.dices.each do |dice|
             button.btn.btn-sm.m-1.p-0.dice class="btn-#{color(dice.color)}" = dice.number
+
 hr
-    .navbar.navbar-expand-lg.navbar-light.bg-light.mb-4
-      a.navbar-brand href="#" = "#{color_kanji(@player.color)}プレイヤー"
+
+.container
+  .row
+    - @player.samurais.each do |samurai|
+      .col-2
+        .card.box-shadow.text-center
+          h6.card-header.py-1 = samurai.name
+          .card-body
+          .card-footer.py-0 = samurai.ability
+
+  .row.mt-4
+    - @player.castles.each do |castle|
+      .col-2
+        .card.box-shadow.text-center
+          h6.card-header.py-1 = castle.country
+          .card-body.py-1.px-2
+            h6.text-left = castle.area
+            h6 = castle.name
+          .card-footer.py-0 = castle.ability
+
+  .row.mt-4
+    .col-12
+      .card
+        .card-header.py-0
+          h6 ダイス
+        .card-body.p-1
+          - @player.dices.each do |dice|
+            = link_to dice.number, move_player_dice_path(@player,dice), {}, class: "btn btn-sm m-1 p-0 dice btn-#{color(dice.color)}"
 
 
